--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,6 +14,19 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'dev.frozenmilk.sinister.sloth.load'
+
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://repo.dairy.foundation/releases"
+        }
+    }
+    dependencies {
+        classpath "dev.frozenmilk:Load:0.2.4"
+    }
+}
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -23,9 +36,17 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url = "https://repo.dairy.foundation/releases"
+    }
+}
+
 dependencies {
     implementation project(':StealthLib')
     implementation project(':FtcRobotController')
+
+    implementation("dev.frozenmilk.sinister:Sloth:0.2.4")
 
     //FTCLib Implementation
     implementation 'org.ftclib.ftclib:core:2.1.1' // core
