--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation project(':FtcRobotController')
 
     implementation("dev.frozenmilk.sinister:Sloth:0.2.4")
+    implementation 'com.acmerobotics.slothboard:dashboard:0.2.4+0.4.17'
 
     //FTCLib Implementation
     implementation 'org.ftclib.ftclib:core:2.1.1' // core
