--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -5,6 +5,7 @@ repositories {
     maven { url = 'https://maven.brott.dev/' }
     maven { url = 'https://maven.pedropathing.com' }
     maven { url = "https://mymaven.bylazar.com/releases" }
+    maven { url = 'https://repo.dairy.foundation/releases' }
 }
 
 dependencies {
@@ -17,12 +18,13 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:11.0.0'
     implementation 'org.firstinspires.ftc:Vision:11.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.pedropathing:ftc:2.0.3'
+
+    implementation("com.pedropathing:ftc:2.0.3")
     implementation 'com.pedropathing:telemetry:1.0.0'
 
     implementation 'com.bylazar:fullpanels:1.0.6'
 
-    //FTC Dashboard
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.17'
+    //FTC Dashboard (commented out because of slothboard)
+//    implementation 'com.acmerobotics.dashboard:dashboard:0.4.17'
 }
 
