--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation("com.pedropathing:ftc:2.0.4")
     implementation 'com.pedropathing:telemetry:1.0.0'
 
-    implementation 'com.bylazar:fullpanels:1.0.6'
+    implementation "com.bylazar:fullpanels:1.0.10"
 
     //FTC Dashboard (commented out because of slothboard)
 //    implementation 'com.acmerobotics.dashboard:dashboard:0.5.1'
